Adiciona parte visual do site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <link rel="stylesheet" href="estilo/estilo.css">
 </head>
 <body>
-    
+    <div class="div">
+        <input type="number" id="numPokemon" placeholder="Nº Na Pokedex">
+        <button type="button" id="botPokemon">Buscar</button>
+    </div>
+    <div class="div2">
+        <div id="bolinha"></div>
+        <img src="" id="pokeImagem">
+        <h2 id="pokeNome"></h2>
+        <div>
+            <div id="divTipo1"></div>
+            <div id="divTipo2"></div>
+            <div id="divTipo3"></div>
+            <div id="divTipo4"></div>
+            <div id="divTipo5"></div>
+            <div id="divTipo6"></div>
+            <div id="divTipo7"></div>
+            <div id="divTipo8"></div>
+            <div id="divTipo9"></div>
+            <div id="divTipo10"></div>
+            <div id="divTipo11"></div>
+            <div id="divTipo12"></div>
+            <div id="divTipo13"></div>
+            <div id="divTipo14"></div>
+            <div id="divTipo15"></div>
+            <div id="divTipo16"></div>
+            <div id="divTipo17"></div>
+            <div id="divTipo18"></div>
+            <div id="divTipo19"></div>
+        </div>
+    </div>
 </body>
 </html>
