Finaliza o exercicio, corrige bugs no script

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Pokedex</title>
     <script src="script/script.js"></script>
     <link rel="stylesheet" href="estilo/estilo.css">
+    <link rel="stylesheet" href="estilo/tipos.css">
 </head>
 <body>
     <div class="div">
@@ -15,7 +16,9 @@
         <img src="" id="pokeImagem">
         <h2 id="pokeNome"></h2>
         <div id="tiposPokemon">
-            <div class="displayNone"></div>
+            <div class="displayNone pokemon-type"></div>
+            <div class="displayNone pokemon-type"></div>
+            <div class="displayNone pokemon-type"></div>
         </div>
     </div>
 </body>
