Adiciona o header que achei que não era parte da atividade

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <script src="script/script.js"></script>
     <link rel="stylesheet" href="estilo/estilo.css">
     <link rel="stylesheet" href="estilo/tipos.css">
+    <link rel="shortcut icon" href="https://eadtt.com.br/pluginfile.php/1/theme_edutools/favicon/1741301367/favicon.ico">
 </head>
 <body>
+    <header>
+        <div>
+            <img src="Imagens/logodarktt.png" id="Logo">
+        </div>
+    </header>
     <div class="div">
         <input type="number" id="numPokemon" placeholder="Nº Na Pokedex">
         <button type="button" id="botPokemon" onclick="BuscarPokemon()">Buscar</button>
